Update and rename README.md to index.html

--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
-<a href="https://www.dta.gov.au/">
+<!doctype html>
+
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+
+  <title>DTA Clone</title>
+  <meta name="description" content="DTA Clone">
+
+  <link rel="stylesheet" href="css/styles.css?v=1.0">
+
+</head>
+
+<body>
+<body style="background-color:#313131;">
+
 <img src="https://graycor.github.io/images/logo.png" alt="DTA Logo" width="601" height="128" background-color: transparent;border: none;>
-</a>
 
 <span style="color:#45C2F0 font-size: 15px>**Simple, clear and fast public services**</span>
 
-<title>DTA Test Page</title>
 
-<body style="background-color:#313131;">
+
 
     <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
 
@@ -17,3 +31,7 @@
     ><a href="/news-blogs/all" class="sf-depth-1">News and blogs</a></li><li id="" role="none"
     ><a href="/digital-transformation-strategy" class="sf-depth-1">Digital Transformation Strategy</a></li><li id="" role="none"
     ><a href="/contact-us" class="sf-depth-1">Contact us</a></li>
+  
+  
+</body>
+</html>
