--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
 
   <title>DTA Clone</title>
-  <meta name="description" content="DTA Clone">
+  <meta name="description" content="DTA Playbook">
 
   <link rel="stylesheet" href="css/styles.css?v=1.0">
 
@@ -17,7 +17,7 @@
 
 <img src="https://graycor.github.io/images/logo.png" alt="DTA Logo" width="601" height="128" background-color: transparent;border: none;>
 
-<span style="color:#45C2F0 font-size: 15px>**Simple, clear and fast public services**</span>
+<h1 style="color:#45C2F0 font-size: 15px>**Simple, clear and fast public services**</h1>
 
 
 
