--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <head>
   <meta charset="utf-8">
 
-  <title>DTA Clone</title>
-  <meta name="description" content="DTA Playbook">
+  <title>Empty</title>
+  <meta name="description" content="Empty">
 
   <link rel="stylesheet" href="css/styles.css?v=1.0">
 
@@ -15,23 +15,7 @@
 <body>
 <body style="background-color:#313131;">
 
-<img src="https://graycor.github.io/images/logo.png" alt="DTA Logo" width="601" height="128" background-color: transparent;border: none;>
-
-<h1 style="color:#45C2F0 font-size: 15px>**Simple, clear and fast public services**</h1>
-
-
-
-
     <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
 
-<li id="" role="none"
-    ><a href="/help-and-advice" class="sf-depth-1">Help and advice</a></li><li id="" role="none"
-    ><a href="/our-projects" class="sf-depth-1">Our projects</a></li><li id="" role="none"
-    ><a href="/about-us" class="sf-depth-1">About us</a></li><li id="" role="none"
-    ><a href="/news-blogs/all" class="sf-depth-1">News and blogs</a></li><li id="" role="none"
-    ><a href="/digital-transformation-strategy" class="sf-depth-1">Digital Transformation Strategy</a></li><li id="" role="none"
-    ><a href="/contact-us" class="sf-depth-1">Contact us</a></li>
-  
-  
 </body>
 </html>
